--- a/BetterSCP.SCP500/BetterSCP.SCP500.csproj
+++ b/BetterSCP.SCP500/BetterSCP.SCP500.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Config.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResurrectCommand.cs" />
+    <Compile Include="SCP500Shield.cs" />
     <Compile Include="Scp500Handler.cs" />
     <Compile Include="Scp500PlayerRevivedEventArgs.cs" />
   </ItemGroup>
