--- a/BetterSCP.SCP500/BetterSCP.SCP500.csproj
+++ b/BetterSCP.SCP500/BetterSCP.SCP500.csproj
@@ -11,6 +11,7 @@
     <RootNamespace>Mistaken.BetterSCP.SCP500</RootNamespace>
     <AssemblyName>Mistaken.BetterSCP.SCP500</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+	<LangVersion>9.0</LangVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
